3_ano/PL/PL-Aulas/Aula7/y.output
Grammar

    0 $accept: Turmas $end

    1 Turmas: %empty
    2       | Turmas Turma

    3 Turma: ID '{' Alunos '}'

    4 Alunos: Aluno ';'
    5       | Alunos Aluno ';'

    6 Aluno: CodA Nome Notas

    7 CodA: ID

    8 Nome: STRING

    9 Notas: '(' ListNUM ')'

   10 ListNUM: NUM
   11        | ListNUM ',' NUM


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9
')' (41) 9
',' (44) 11
';' (59) 4 5
'{' (123) 3
'}' (125) 3
error (256)
ID (258) 3 7
STRING (259) 8
NUM (260) 10 11


Nonterminals, with rules where they appear

$accept (12)
    on left: 0
Turmas (13)
    on left: 1 2, on right: 0 2
Turma (14)
    on left: 3, on right: 2
Alunos (15)
    on left: 4 5, on right: 3 5
Aluno (16)
    on left: 6, on right: 4 5
CodA (17)
    on left: 7, on right: 6
Nome (18)
    on left: 8, on right: 6
Notas (19)
    on left: 9, on right: 6
ListNUM (20)
    on left: 10 11, on right: 9 11


State 0

    0 $accept: . Turmas $end

    $default  reduce using rule 1 (Turmas)

    Turmas  go to state 1


State 1

    0 $accept: Turmas . $end
    2 Turmas: Turmas . Turma

    $end  shift, and go to state 2
    ID    shift, and go to state 3

    Turma  go to state 4


State 2

    0 $accept: Turmas $end .

    $default  accept


State 3

    3 Turma: ID . '{' Alunos '}'

    '{'  shift, and go to state 5


State 4

    2 Turmas: Turmas Turma .

    $default  reduce using rule 2 (Turmas)


State 5

    3 Turma: ID '{' . Alunos '}'

    ID  shift, and go to state 6

    Alunos  go to state 7
    Aluno   go to state 8
    CodA    go to state 9


State 6

    7 CodA: ID .

    $default  reduce using rule 7 (CodA)


State 7

    3 Turma: ID '{' Alunos . '}'
    5 Alunos: Alunos . Aluno ';'

    ID   shift, and go to state 6
    '}'  shift, and go to state 10

    Aluno  go to state 11
    CodA   go to state 9


State 8

    4 Alunos: Aluno . ';'

    ';'  shift, and go to state 12


State 9

    6 Aluno: CodA . Nome Notas

    STRING  shift, and go to state 13

    Nome  go to state 14


State 10

    3 Turma: ID '{' Alunos '}' .

    $default  reduce using rule 3 (Turma)


State 11

    5 Alunos: Alunos Aluno . ';'

    ';'  shift, and go to state 15


State 12

    4 Alunos: Aluno ';' .

    $default  reduce using rule 4 (Alunos)


State 13

    8 Nome: STRING .

    $default  reduce using rule 8 (Nome)


State 14

    6 Aluno: CodA Nome . Notas

    '('  shift, and go to state 16

    Notas  go to state 17


State 15

    5 Alunos: Alunos Aluno ';' .

    $default  reduce using rule 5 (Alunos)


State 16

    9 Notas: '(' . ListNUM ')'

    NUM  shift, and go to state 18

    ListNUM  go to state 19


State 17

    6 Aluno: CodA Nome Notas .

    $default  reduce using rule 6 (Aluno)


State 18

   10 ListNUM: NUM .

    $default  reduce using rule 10 (ListNUM)


State 19

    9 Notas: '(' ListNUM . ')'
   11 ListNUM: ListNUM . ',' NUM

    ')'  shift, and go to state 20
    ','  shift, and go to state 21


State 20

    9 Notas: '(' ListNUM ')' .

    $default  reduce using rule 9 (Notas)


State 21

   11 ListNUM: ListNUM ',' . NUM

    NUM  shift, and go to state 22


State 22

   11 ListNUM: ListNUM ',' NUM .

    $default  reduce using rule 11 (ListNUM)
